# glean

./: .gitignore  CHANGELOG.md  Cargo.toml  DEPENDENCIES.md  Xargo.toml  build.gradle  flake.nix  gen.rb  glean.1.schema.json  gradlew  gradlew.bat  sizes.md
.circleci/: config.yml
.github/actions/android-setup/: action.yml
.github/actions/build-windows-i686-wheel/: action.yml
.github/actions/build-windows-x86_64-wheel/: action.yml
.github/actions/install-android-ndk/: action.yml
.github/actions/install-ghr-darwin/: action.yml
.github/workflows/: ci.yml  ios.yml  lint.yml
glean-core/: Cargo.toml  metrics.json  metrics.yaml  pings.json
glean-core/android/: build.gradle
glean-core/android-native/: build.gradle
glean-core/ios/: sdk_generator.sh
glean-core/python/: requirements_dev.txt  setup.py
glean-core/rlb/: Cargo.toml
glean-core/src/: common_metric_data.rs  core_metrics.rs  error.rs  error_recording.rs  glean.udl  glean_core.udl  glean_metrics.rs  internal_metrics.rs  lib.rs  lib_unit_tests.rs  scheduler.rs
glean-core/tests/: boolean.rs  counter.rs  custom_distribution.rs  datetime.rs  event.rs  labeled.rs  memory_distribution.rs  ping.rs  ping_maker.rs  quantity.rs  rate.rs  storage.rs  string.rs  string_list.rs  text.rs  timespan.rs  timing_distribution.rs  uuid.rs
glean-core/uniffi/: Cargo.toml
glean-core/uniffi/src/: common_metric_data.rs  error_recording.rs  glean_core.udl  glean_core.uniffi.rs  lib.rs  storage.rs
glean-core/uniffi/src/core/: mod.rs
glean-core/uniffi/src/private/: counter.rs  event.rs  labeled.rs  mod.rs
(+103 files in other folders)
