[package]
name = "glean-uniffi"
version = "0.1.0"
authors = ["Jan-Erik Rediger <jrediger@mozilla.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5"
inherent = "0.1.4"
log = "0.4.8"
once_cell = "1.2.0"
thiserror = "1.0.4"
serde_json = "1.0.44"
serde = { version = "1.0.104", features = ["derive"] }
uuid = { version = "0.8.1", features = ["v4"] }
chrono = { version = "0.4.10", features = ["serde"] }
time = "0.1.40"
whatsys = "0.1.2"
uniffi = "0.12.0"
uniffi_macros = "0.12.0"

[build-dependencies]
uniffi_build = "0.12.0"
